# mdlm-engine

./: .gitignore  BENCHMARKS.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.3.0.md  pyproject.toml
mdlm_engine/: __init__.py
mdlm_engine/adapters/: __init__.py  base.py  dream.py  llada.py
mdlm_engine/bench/: __init__.py  equivalence.py  harness.py
mdlm_engine/cache/: __init__.py  base.py  block.py  dkv.py
mdlm_engine/core/: __init__.py  engine.py  loop.py  state.py
mdlm_engine/models/: __init__.py
mdlm_engine/models/dream_fastdllm/: __init__.py  modeling_dream.py
mdlm_engine/ops/: __init__.py  compile.py  flexattn.py
mdlm_engine/sampler/: __init__.py  base.py  confidence.py
mdlm_engine/scheduler/: __init__.py  base.py  confidence.py  slowfast.py  uniform.py
mdlm_engine/speculative/: __init__.py  cache_snapshot.py  propose.py  tree.py  verify.py
scripts/: bootstrap_vastai.sh  cache_equivalence.py  phase1_acceptance.sh  phase2_1_acceptance.sh  phase2_acceptance.sh  v0_2_2_higher_budget.sh  v0_2_2_investigation.sh  v0_2_2_native_baseline.sh  v0_2_2_steps16.sh  v0_2_3_compile_test.sh  v0_3_0_block_ssd.sh  v0_3_0_diverse.sh  v0_3_0_diverse_ssd.sh  v0_3_0_production.sh  v0_3_0_speed.sh  v0_3_0_spike.sh  v0_3_0_ssd_temp0.sh  v0_3_0_threshold_sweep.sh
scripts/day1_phase2/: README.md  verify_dual_cache.py
scripts/day1_spike/: 01_llada_spike.json  01_llada_spike.py  02_host_overhead_profile.json  02_host_overhead_profile.py  03_mxfp8_viability.json  03_mxfp8_viability.py  README.md
tests/: conftest.py  test_adapter_validation.py  test_cache_block.py  test_cache_dkv.py  test_cache_to_legacy_kv.py  test_cache_update_from_model.py  test_dream_adapter.py  test_dream_adapter_caps.py  test_imports_and_abc.py  test_llada_adapter.py  test_ops.py  test_sampler.py  test_scheduler.py  test_speculative.py  test_speculative_block.py  test_tree_speculative.py
